syntax = "proto3";
option go_package = "grpc-tutorial/api/proto/base";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}