syntax = "proto3";
option go_package="grpc-tutorial/api/proto/server-stream";
import "api/proto/base/base.proto";

service Greeter {
  rpc sayHelloStream(HelloRequest) returns (stream HelloResponse);
}

